--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,11 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+
+    <color name="primary_text">#FFFFFF</color>
+    <color name="secondary_text">#8F8F8F</color>
+
+    <color name="detail_accent_pane_background">#242424</color>
+    <color name="detail_accent_label">#A5A5A5</color>
+
 </resources>
