Updated styles and dimnes Added drawable Layout refactor

--- a/app/src/main/res/layout-v26/fragment_current_weather.xml
+++ b/app/src/main/res/layout-v26/fragment_current_weather.xml
@@ -26,10 +26,17 @@
 
         <View style="@style/dividerLine" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:layout_marginTop="8dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+        <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Hourly Forecast"
+        android:textSize="16sp"
+        android:layout_margin="16dp"
+        android:layout_gravity="center"/>
+
+<!--        <androidx.recyclerview.widget.RecyclerView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content" />-->
 
     </LinearLayout>
 
