--- a/app/src/main/res/layout/weather_primary_info.xml
+++ b/app/src/main/res/layout/weather_primary_info.xml
@@ -12,31 +12,40 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.5"
-        tools:layout_editor_absoluteX="192dp"
-        tools:layout_editor_absoluteY="0dp" />
+        app:layout_constraintGuide_begin="206dp" />
 
     <TextView
         android:id="@+id/date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
         android:text="Saturday, September 24"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/weather_icon"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/location"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="Olivos, Buenos Aires"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/date" />
 
     <ImageView
         android:id="@+id/weather_icon"
         android:layout_width="96dp"
         android:layout_height="96dp"
-        android:adjustViewBounds="true"
+        android:scaleType="fitXY"
+        android:background="@drawable/circle_background"
         android:src="@drawable/ic_launcher_background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/horizontal_middle"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/location" />
 
     <TextView
         android:id="@+id/weather_description"
@@ -51,7 +60,7 @@
         app:layout_constraintTop_toBottomOf="@+id/weather_icon" />
 
     <TextView
-        android:id="@+id/high_temperature"
+        android:id="@+id/temperature"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-light"
@@ -72,7 +81,7 @@
         android:textColor="@color/secondary_text"
         android:textSize="36sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/weather_description"
-        app:layout_constraintLeft_toLeftOf="@+id/high_temperature"
-        app:layout_constraintRight_toRightOf="@+id/high_temperature" />
+        app:layout_constraintLeft_toLeftOf="@+id/temperature"
+        app:layout_constraintRight_toRightOf="@+id/temperature" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
