--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,11 +10,14 @@
 
     <style name="DetailLabel" parent="@style/TextAppearance.AppCompat.Title">
         <item name="android:layout_width">wrap_content</item>
+        <item name="android:paddingBottom">8dp</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginBottom">16dp</item>
         <item name="android:textColor">@color/detail_accent_label</item>
     </style>
 
     <style name="ExtraWeatherMeasurement" parent="@style/TextAppearance.AppCompat.Headline">
+        <item name="android:paddingBottom">8dp</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@android:color/white</item>
