--- a/app/src/main/res/layout/weather_secondary_info.xml
+++ b/app/src/main/res/layout/weather_secondary_info.xml
@@ -5,14 +5,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/extra_details"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/secondary_information_height"
+    android:layout_height="wrap_content"
     android:paddingStart="@dimen/default_horizontal_padding"
     android:paddingLeft="@dimen/default_horizontal_padding"
     android:paddingTop="@dimen/default_vertical_padding"
     android:paddingEnd="@dimen/default_horizontal_padding"
-    android:paddingRight="@dimen/default_horizontal_padding"
-    android:paddingBottom="@dimen/default_vertical_padding">
-
+    android:paddingRight="@dimen/default_horizontal_padding">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/horizontal_middle"
@@ -25,7 +23,6 @@
         android:id="@+id/humidity_label"
         style="@style/DetailLabel"
         android:text="@string/humidity_label"
-        app:layout_constraintBottom_toTopOf="@+id/pressure_label"
         app:layout_constraintLeft_toLeftOf="@+id/extra_details"
         app:layout_constraintTop_toTopOf="@+id/extra_details" />
 
@@ -40,9 +37,8 @@
         android:id="@+id/pressure_label"
         style="@style/DetailLabel"
         android:text="@string/pressure_label"
-        app:layout_constraintBottom_toBottomOf="@+id/extra_details"
         app:layout_constraintLeft_toLeftOf="@+id/extra_details"
-        app:layout_constraintTop_toTopOf="@+id/extra_details" />
+        app:layout_constraintTop_toBottomOf="@+id/humidity" />
 
     <TextView
         android:id="@+id/pressure"
@@ -52,17 +48,33 @@
         app:layout_constraintLeft_toLeftOf="@+id/horizontal_middle" />
 
     <TextView
+        android:id="@+id/real_feel_label"
+        style="@style/DetailLabel"
+        android:text="@string/real_feel_label"
+        app:layout_constraintLeft_toLeftOf="@+id/extra_details"
+        app:layout_constraintTop_toBottomOf="@+id/pressure" />
+
+    <TextView
+        android:id="@+id/real_feel"
+        style="@style/ExtraWeatherMeasurement"
+        android:text="95\u00b0"
+        app:layout_constraintBottom_toBottomOf="@+id/real_feel_label"
+        app:layout_constraintLeft_toLeftOf="@+id/horizontal_middle" />
+
+    <TextView
         android:id="@+id/wind_label"
         style="@style/DetailLabel"
         android:text="@string/wind_label"
         app:layout_constraintBottom_toBottomOf="@+id/extra_details"
         app:layout_constraintLeft_toLeftOf="@+id/extra_details"
-        app:layout_constraintTop_toBottomOf="@+id/pressure_label" />
+        android:paddingBottom="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/real_feel" />
 
     <TextView
         android:id="@+id/wind_measurement"
         style="@style/ExtraWeatherMeasurement"
-        android:text="4km/h NW"
+        android:text="4km/h"
+        android:paddingBottom="0dp"
         app:layout_constraintBottom_toBottomOf="@+id/wind_label"
         app:layout_constraintLeft_toLeftOf="@+id/horizontal_middle" />
 
