--- a/app/src/main/res/layout-v26/weather_primary_info.xml
+++ b/app/src/main/res/layout-v26/weather_primary_info.xml
@@ -19,8 +19,8 @@
         android:id="@+id/date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Saturday, September 24"
-        android:textSize="20sp"
+        tools:text="Saturday, September 24"
+        android:textSize="24sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
@@ -33,7 +33,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:gravity="center"
-        android:text="Olivos, Buenos Aires"
+        tools:text="Olivos, Buenos Aires"
         android:textSize="20sp" />
 
     <ImageView
