--- a/app/src/main/res/layout/weather_secondary_info.xml
+++ b/app/src/main/res/layout/weather_secondary_info.xml
@@ -3,6 +3,7 @@
 
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/extra_details"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -20,17 +21,17 @@
         app:layout_constraintGuide_percent="0.5" />
 
     <TextView
-        android:id="@+id/humidity_label"
+        android:id="@+id/real_feel_label"
         style="@style/DetailLabel"
-        android:text="@string/humidity_label"
+        android:text="@string/real_feel_label"
         app:layout_constraintLeft_toLeftOf="@+id/extra_details"
         app:layout_constraintTop_toTopOf="@+id/extra_details" />
 
     <TextView
-        android:id="@+id/humidity"
+        android:id="@+id/real_feel"
         style="@style/ExtraWeatherMeasurement"
-        android:text="38%"
-        app:layout_constraintBottom_toBottomOf="@+id/humidity_label"
+        tools:text="95\u00b0"
+        app:layout_constraintBottom_toBottomOf="@+id/real_feel_label"
         app:layout_constraintLeft_toLeftOf="@+id/horizontal_middle" />
 
     <TextView
@@ -38,43 +39,43 @@
         style="@style/DetailLabel"
         android:text="@string/pressure_label"
         app:layout_constraintLeft_toLeftOf="@+id/extra_details"
-        app:layout_constraintTop_toBottomOf="@+id/humidity" />
+        app:layout_constraintTop_toBottomOf="@+id/real_feel" />
 
     <TextView
         android:id="@+id/pressure"
         style="@style/ExtraWeatherMeasurement"
-        android:text="995 hPa"
+        tools:text="995 hPa"
         app:layout_constraintBottom_toBottomOf="@+id/pressure_label"
         app:layout_constraintLeft_toLeftOf="@+id/horizontal_middle" />
 
     <TextView
-        android:id="@+id/real_feel_label"
+        android:id="@+id/humidity_label"
         style="@style/DetailLabel"
-        android:text="@string/real_feel_label"
+        android:text="@string/humidity_label"
         app:layout_constraintLeft_toLeftOf="@+id/extra_details"
         app:layout_constraintTop_toBottomOf="@+id/pressure" />
 
     <TextView
-        android:id="@+id/real_feel"
+        android:id="@+id/humidity"
         style="@style/ExtraWeatherMeasurement"
-        android:text="95\u00b0"
-        app:layout_constraintBottom_toBottomOf="@+id/real_feel_label"
-        app:layout_constraintLeft_toLeftOf="@+id/horizontal_middle" />
+        app:layout_constraintBottom_toBottomOf="@+id/humidity_label"
+        app:layout_constraintLeft_toLeftOf="@+id/horizontal_middle"
+        tools:text="38%" />
 
     <TextView
         android:id="@+id/wind_label"
         style="@style/DetailLabel"
+        android:paddingBottom="0dp"
         android:text="@string/wind_label"
         app:layout_constraintBottom_toBottomOf="@+id/extra_details"
         app:layout_constraintLeft_toLeftOf="@+id/extra_details"
-        android:paddingBottom="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/real_feel" />
+        app:layout_constraintTop_toBottomOf="@+id/humidity" />
 
     <TextView
         android:id="@+id/wind_measurement"
         style="@style/ExtraWeatherMeasurement"
-        android:text="4km/h"
         android:paddingBottom="0dp"
+        tools:text="4 km/h"
         app:layout_constraintBottom_toBottomOf="@+id/wind_label"
         app:layout_constraintLeft_toLeftOf="@+id/horizontal_middle" />
 
