--- a/app/src/main/res/values-v26/styles.xml
+++ b/app/src/main/res/values-v26/styles.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="dividerLine">
+    <style name="DividerLine">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_marginHorizontal">8dp</item>
         <item name="android:layout_height">1dp</item>
