--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,12 +23,22 @@
         <item name="android:textColor">@android:color/white</item>
     </style>
 
-    <style name="dividerLine">
+    <style name="DividerLine">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_marginLeft">8dp</item>
         <item name="android:layout_marginRight">8dp</item>
         <item name="android:layout_height">1dp</item>
         <item name="android:background">@color/secondary_text</item>
+    </style>
+
+    <style name="TempLabelStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginEnd">6dp</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="android:layout_marginRight">6dp</item>
+        <item name="android:textColor">@color/secondary_text</item>
+        <item name="android:textSize">12sp</item>
     </style>
 
 
