--- a/app/src/main/res/layout/weather_primary_info.xml
+++ b/app/src/main/res/layout/weather_primary_info.xml
@@ -28,11 +28,11 @@
         android:id="@+id/location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:gravity="center"
+        android:paddingStart="@dimen/default_horizontal_padding"
+        android:paddingLeft="@dimen/default_horizontal_padding"
+        android:paddingEnd="@dimen/default_horizontal_padding"
+        android:paddingRight="@dimen/default_horizontal_padding"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
