--- a/app/src/main/res/layout-v26/weather_primary_info.xml
+++ b/app/src/main/res/layout-v26/weather_primary_info.xml
@@ -29,12 +29,9 @@
         android:id="@+id/location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:gravity="center"
         android:textSize="20sp"
+        android:paddingHorizontal="@dimen/default_horizontal_padding"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/date"
